# bevy-lsystem-garden

./: .gitignore  Cargo.toml  flake.nix  fractal_tree_3d.json
assets/: button.glb  pot.blend  pot.glb
blender/: button.blend  button.blend1
src/: .#lsys_egui.rs  camera.rs  cool_ball.rs  editor.rs  fractal_plant.rs  fractal_tree.rs  hilbert_curve.rs  lsys_egui.rs  lsys_rendering.rs  lsystems.rs  main.rs  pickup.rs  plant_pot.rs  player.rs  save_load.rs  states.rs  utils.rs
