[package]
name = "bevy_lsystems"
version = "0.1.0"
edition = "2021"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
[profile.dev]
opt-level = 1
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
#lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[dependencies]
bevy = { version = "0.13.1", features = ["wayland", "dynamic_linking"] }
bevy-inspector-egui = "0.23.4"
bevy_egui = "0.26.0"
bevy_flycam = "0.13.0"
bevy_panorbit_camera = "0.17.0"
lsystem = "0.2.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
